--- a/pricing-service/pom.xml
+++ b/pricing-service/pom.xml
@@ -13,6 +13,10 @@
   <description>Pricing Service for Service App Microservices</description>
 
   <dependencies>
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
