Refactored member-service and pricing-service: message (rabbitmq) and cache (redis) are working, removed unused tests and properties, added integration tests for pricing data handling, and introduced type-safe PriceType enums.

--- a/member-service/.env.example
+++ b/member-service/.env.example
@@ -2,3 +2,10 @@
 MEMBER_DB_USERNAME=
 MEMBER_DB_PASSWORD=
 MEMBER_DB_NAME=
+
+# --- RabbitMQ ---
+RABBITMQ_USERNAME=
+RABBITMQ_PW=
+
+# Redis
+REDIS_PASSWORD=
