--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: member-service
 
+  threads:
+    virtual:
+      enabled: true
+
   datasource:
     url: jdbc:postgresql://localhost:5435/${MEMBER_DB_NAME}
     username: ${MEMBER_DB_USERNAME}
@@ -21,6 +25,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+      password: ${REDIS_PASSWORD}
 
   security:
     oauth2:
@@ -28,8 +33,28 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/service-app-realm
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PW}
+
+app:
+  rabbitmq:
+    exchange:
+      pricing: pricing.exchange
+    queue:
+      price-updated: queue.price-updated.member-service
+    routingkey:
+      price-updated: price.updated.key
+
+  services:
+    pricing:
+      base-url: http://localhost:8082/api/v1
+
 eureka:
   client:
+    enabled: false
     service-url:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
