--- a/pricing-service/.env.example
+++ b/pricing-service/.env.example
@@ -1,8 +1,8 @@
-# --- Application Database Credentials ---
-DB_USERNAME=
-DB_PASSWORD=
+# Pricing Service Database (MongoDB)
+PRICING_DB_USERNAME=
+PRICING_DB_PASSWORD=
 PRICING_DB_NAME=
 
-# --- RabbitMQ ---
+# RabbitMQ Configuration
 RABBITMQ_USERNAME=
 RABBITMQ_PW=
