--- a/service-app-infra/local/.env.example
+++ b/service-app-infra/local/.env.example
@@ -2,13 +2,13 @@
 # openssl rand -base64 16
 
 # Keycloak Configuration
-KC_BOOTSTRAP_ADMIN_USERNAME=admin
+KC_BOOTSTRAP_ADMIN_USERNAME=
 KC_BOOTSTRAP_ADMIN_PASSWORD=
 
 # Keycloak Database (PostgreSQL)
-KC_DB_USERNAME=keycloak_user
+KC_DB_USERNAME=
 KC_DB_PASSWORD=
-KC_DB_NAME=keycloakdb
+KC_DB_NAME=
 
 # Keycloak Realm User Passwords
 REALM_ADMIN_PASSWORD=
@@ -16,16 +16,18 @@ REALM_MANAGER_PASSWORD=
 REALM_MEMBER_PASSWORD=
 
 # Member Service Database (PostgreSQL)
-MEMBER_DB_USERNAME=member_user
+MEMBER_DB_USERNAME=
 MEMBER_DB_PASSWORD=
-MEMBER_DB_NAME=memberdb
+MEMBER_DB_NAME=
 
 # Pricing Service Database (MongoDB)
-PRICING_DB_USERNAME=pricing_user
+PRICING_DB_USERNAME=
 PRICING_DB_PASSWORD=
-PRICING_DB_NAME=pricingdb
+PRICING_DB_NAME=
 
 # RabbitMQ Configuration
-RABBITMQ_USERNAME=rabbit_user
-RABBITMQ_PASSWORD=
+RABBITMQ_USERNAME=
+RABBITMQ_PW==
 
+# Redis
+REDIS_PASSWORD=
