Added Member request processing with Kafka. Added member-request-service: implemented member request processing with Redis caching and Kafka integration. Updated member-service with new consumer logic for member requests, added Redis and Kafka configurations, and extended APIs for handling and fetching requests. Updated documentation and parent POM accordingly.

--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -39,6 +39,18 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PW}
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: member-service-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: com.eslirodrigues.member.dto.MemberRequestEvent
+        spring.json.trusted.packages: "com.eslirodrigues.member.dto"
+
 app:
   rabbitmq:
     exchange:
@@ -47,6 +59,10 @@ app:
       price-updated: queue.price-updated.member-service
     routingkey:
       price-updated: price.updated.key
+
+  kafka:
+    topic:
+      member-requests: member.requests.topic
 
   services:
     pricing:
