Added member request API to member-service, updated request paths, and integrated member-request-service with Redis, Eureka, and Gateway. Simplified member-service logic and added HTTP request samples for consistency.

--- a/member-request-service/src/main/resources/application.yml
+++ b/member-request-service/src/main/resources/application.yml
@@ -33,3 +33,28 @@ app:
   kafka:
     topic:
       member-requests: member.requests.topic
+
+eureka:
+  client:
+    enabled: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 30
+    lease-expiration-duration-in-seconds: 90
+    metadata-map:
+      version: 1.0.0
+      description: Member management service
+      health-check-url: http://localhost:8081/actuator/health
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when-authorized
