--- a/pricing-service/src/main/resources/application.yml
+++ b/pricing-service/src/main/resources/application.yml
@@ -20,6 +20,12 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PW}
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/service-app-realm
+
 app:
   rabbitmq:
     exchange:
@@ -29,7 +35,7 @@ app:
 
 eureka:
   client:
-    enabled: false
+    enabled: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
