--- a/service-app-gateway/src/main/resources/application.yml
+++ b/service-app-gateway/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+      password: ${REDIS_PASSWORD}
 
   cloud:
     gateway:
@@ -25,6 +26,20 @@ spring:
               enabled: true
 
           routes:
+            - id: member-request-service
+              uri: lb://member-request-service
+              predicates:
+                  - Path=/api/v1/member-requests/**
+              filters:
+                  - name: RequestRateLimiter
+                    args:
+                      rate-limiter: "#{@defaultRateLimiter}"
+                      key-resolver: "#{@userKeyResolver}"
+                  - name: CircuitBreaker
+                    args:
+                      name: member-request-service-circuitbreaker
+                      fallbackUri: forward:/fallback/member-request-service
+
             - id: member-service
               uri: lb://member-service
               predicates:
