Add OpenAPI documentation support with Springdoc: configured API paths, integrated Swagger UI, and updated security settings to permit access to documentation endpoints. Enhanced member request DTO with Swagger annotations for better API clarity.

--- a/member-request-service/src/main/resources/application.yml
+++ b/member-request-service/src/main/resources/application.yml
@@ -34,6 +34,12 @@ app:
     topic:
       member-requests: member.requests.topic
 
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
 eureka:
   client:
     enabled: true
