--- a/pricing-service/pom.xml
+++ b/pricing-service/pom.xml
@@ -14,6 +14,11 @@
 
   <dependencies>
       <dependency>
+          <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+          <version>${springdoc-openapi.version}</version>
+      </dependency>
+      <dependency>
           <groupId>org.springframework.cloud</groupId>
           <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
