Integrated OpenTelemetry and Datadog for monitoring. Add Docker support for service-app components: configured Dockerfiles for member-service, pricing-service, service-app-gateway, and service-app-registry. Updated docker-compose.yml to include health checks and environment variables for each service.

--- a/service-app-infra/local/.env.example
+++ b/service-app-infra/local/.env.example
@@ -31,3 +31,11 @@ RABBITMQ_PW==
 
 # Redis
 REDIS_PASSWORD=
+
+# Datadog
+DD_API_KEY=
+
+# OpenTelemetry
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_METRICS_EXPORTER=
+OTEL_LOGS_EXPORTER=
