--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <spring-cloud-kubernetes.version>3.2.0</spring-cloud-kubernetes.version>
         <springdoc-openapi.version>2.8.14</springdoc-openapi.version>
         <opentelemetry-agent.version>2.5.0</opentelemetry-agent.version>
         <datadog.version>1.45.0</datadog.version>
