--- a/service-app-gateway/src/main/resources/application-docker.yml
+++ b/service-app-gateway/src/main/resources/application-docker.yml
@@ -3,7 +3,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8080/realms/service-app-realm/protocol/openid-connect/certs
+          jwk-set-uri: http://keycloak:8080/realms/service-app-realm/protocol/openid-connect/certs
 
   data:
     redis:
