Integrated Datadog dashboards and OTel metrics transformations for enhanced observability. Added `OTEL_TRACES_EXPORTER` in configurations and secrets. Updated Kubernetes manifests and OpenTelemetry Collector setup for Datadog-compatible metrics. Enhanced `.gitignore` with agent directories.

--- a/service-app-infra/k8s/32-member-request-service.yaml
+++ b/service-app-infra/k8s/32-member-request-service.yaml
@@ -31,6 +31,11 @@ spec:
               value: "http://otel-collector:4318"
             - name: OTEL_METRICS_EXPORTER
               value: "otlp"
+            - name: OTEL_TRACES_EXPORTER
+              valueFrom:
+                secretKeyRef:
+                  name: service-app-secrets
+                  key: OTEL_TRACES_EXPORTER
             - name: JAVA_TOOL_OPTIONS
               value: "-javaagent:/app/agents/opentelemetry-javaagent.jar"
             - name: REDIS_PASSWORD
