--- a/service-app-infra/local/docker-compose.yml
+++ b/service-app-infra/local/docker-compose.yml
@@ -98,6 +98,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_METRICS_EXPORTER=${OTEL_METRICS_EXPORTER}
       - OTEL_LOGS_EXPORTER=${OTEL_LOGS_EXPORTER}
+      - OTEL_TRACES_EXPORTER=${OTEL_TRACES_EXPORTER}
       - MEMBER_DB_USERNAME=${MEMBER_DB_USERNAME}
       - MEMBER_DB_PASSWORD=${MEMBER_DB_PASSWORD}
       - MEMBER_DB_NAME=${MEMBER_DB_NAME}
@@ -157,6 +158,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_METRICS_EXPORTER=${OTEL_METRICS_EXPORTER}
       - OTEL_LOGS_EXPORTER=${OTEL_LOGS_EXPORTER}
+      - OTEL_TRACES_EXPORTER=${OTEL_TRACES_EXPORTER}
       - PRICING_DB_USERNAME=${PRICING_DB_USERNAME}
       - PRICING_DB_PASSWORD=${PRICING_DB_PASSWORD}
       - PRICING_DB_NAME=${PRICING_DB_NAME}
@@ -193,6 +195,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_METRICS_EXPORTER=${OTEL_METRICS_EXPORTER}
       - OTEL_LOGS_EXPORTER=${OTEL_LOGS_EXPORTER}
+      - OTEL_TRACES_EXPORTER=${OTEL_TRACES_EXPORTER}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - JAVA_TOOL_OPTIONS=-javaagent:/app/agents/opentelemetry-javaagent.jar
     ports:
@@ -229,6 +232,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_METRICS_EXPORTER=${OTEL_METRICS_EXPORTER}
       - OTEL_LOGS_EXPORTER=${OTEL_LOGS_EXPORTER}
+      - OTEL_TRACES_EXPORTER=${OTEL_TRACES_EXPORTER}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
       - RABBITMQ_PW=${RABBITMQ_PW}
@@ -259,6 +263,7 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_METRICS_EXPORTER=${OTEL_METRICS_EXPORTER}
       - OTEL_LOGS_EXPORTER=${OTEL_LOGS_EXPORTER}
+      - OTEL_TRACES_EXPORTER=${OTEL_TRACES_EXPORTER}
       - JAVA_TOOL_OPTIONS=-javaagent:/app/agents/opentelemetry-javaagent.jar
     ports:
       - "8761:8761"
