--- a/service-app-infra/local/otel-collector-config.yml
+++ b/service-app-infra/local/otel-collector-config.yml
@@ -41,21 +41,62 @@ processors:
       - key: deployment.environment
         value: local
         action: upsert
-      - key: service.name
-        value: "unknown-service"
-        action: insert
+
+  # Transform OTel metric names to Datadog-compatible names
+  metricstransform:
+    transforms:
+      # JVM Heap Memory
+      - include: process.runtime.jvm.memory.usage
+        action: update
+        new_name: jvm.heap_memory
+        operations:
+          - action: add_label
+            new_label: type
+            new_value: used
+      - include: process.runtime.jvm.memory.limit
+        action: update
+        new_name: jvm.heap_memory
+        operations:
+          - action: add_label
+            new_label: type
+            new_value: max
+
+      # JVM GC Duration
+      - include: process.runtime.jvm.gc.duration
+        action: update
+        new_name: jvm.gc.duration
+
+      # JVM Thread Count
+      - include: process.runtime.jvm.threads.count
+        action: update
+        new_name: jvm.thread.count
+
+      # JVM CPU Utilization
+      - include: process.runtime.jvm.cpu.utilization
+        action: update
+        new_name: jvm.cpu.recent_utilization
 
 exporters:
   datadog:
     api:
       key: ${DD_API_KEY}
       site: "datadoghq.com"
+    hostname: "otel-collector"
     traces:
       trace_buffer: 500
+      span_name_as_resource_name: true
     metrics:
       histograms:
         mode: distributions
         send_count_sum_metrics: true
+      sums:
+        cumulative_monotonic_mode: to_delta
+    host_metadata:
+      enabled: true
+      hostname_source: config_or_system
+      tags:
+        - "env:local"
+        - "source:otel-collector"
 
 extensions:
   health_check:
@@ -66,7 +107,7 @@ service:
   pipelines:
     metrics:
       receivers: [ otlp, hostmetrics ]
-      processors: [ memory_limiter, resource, batch ]
+      processors: [ memory_limiter, resource, metricstransform, batch ]
       exporters: [ datadog ]
     traces:
       receivers: [ otlp ]
