Added recommendation-service: implemented a new AI-powered service leveraging Google GenAI and Weaviate for contextual plan recommendations. Updated pricing descriptions, introduced RAG architecture, and integrated with the application ecosystem via Docker. Updated ServiceApp documentation.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>member-service</module>
         <module>pricing-service</module>
         <module>member-request-service</module>
+        <module>recommendation-service</module>
     </modules>
 
     <dependencyManagement>
