--- a/service-app-infra/local/docker-compose.yml
+++ b/service-app-infra/local/docker-compose.yml
@@ -276,6 +276,34 @@ services:
     networks:
       - service-app-network
 
+
+
+  weaviate:
+    container_name: weaviate
+    command:
+      - --host
+      - 0.0.0.0
+      - --port
+      - '8091'
+      - --scheme
+      - http
+    image: cr.weaviate.io/semitechnologies/weaviate:1.34.1
+    restart: on-failure:0
+    ports:
+      - "8091:8091"
+      - "50051:50051" # gRPC
+    volumes:
+      - weaviate_data:/var/lib/weaviate
+    environment:
+      QUERY_DEFAULTS_LIMIT: 25
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      CLUSTER_HOSTNAME: 'node1'
+      DEFAULT_VECTORIZER_MODULE: 'none'
+      ENABLE_MODULES: ''
+    networks:
+      - service-app-network
+
   redis:
     image: redis:7-alpine
     container_name: redis
@@ -388,6 +416,7 @@ volumes:
   redis-data:
   rabbitmq-data:
   kafka-data:
+  weaviate_data:
 
 networks:
   service-app-network:
