--- a/service-app-infra/local/docker-compose.yml
+++ b/service-app-infra/local/docker-compose.yml
@@ -348,12 +348,14 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SERVER_ID: 1
+      KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=ruok"
     healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "2181"]
-      interval: 10s
+      test: ["CMD-SHELL", "echo ruok | nc localhost 2181 | grep imok"]
+      interval: 60s
       timeout: 5s
       retries: 5
       start_period: 10s
+      start_interval: 2s
     ports:
       - "2181:2181"
     networks:
